--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Release notes</title>
 
 <style type="text/css">
@@ -13,31 +12,40 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style></head>
+</style>
+</head>
 <body>
-<h1>Version 0.9.6 (10/??/2011)</h1>
+<h1>Version 0.9.6 (10/23/2011)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li><span class="bugFix">Fixes a bug</span>: Displaying the balance history 
-    of an account that a null initial balance and all its transaction's amount 
-    null resulted in an error.</li>
+<li><span class="bugFix">Fixes a bug</span>:
+Displaying the balance history of an account that a null initial
+balance and all its transaction's amount null resulted in an error.</li>
+<li><span class="bugFix">Fixes a bug</span> in the wizard
+for entering sub-transactions: Select a wording that does not appeared
+in any transaction of the account of the edited transaction caused the
+wizard to crash.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
 <h2>Version 0.9.5 (10/16/2011)</h2>
 <ul>
-  <li>Safeguarding the filter between two Yapbam launches is again available for 
-    encrypted data files.</li>
-  <li><span class="bugFix">Fixes some bugs</span>: Under Windows, when the files 
-    in the data directory was hidden, the state and / or preferences were not 
-    saved. Similarly, the currency converter didn't work.</li>
-  <li>Added specific error messages on backup failure of the preferences or of 
-    startup state.</li>
+<li>Safeguarding the filter between two Yapbam launches is
+again available for encrypted data files.</li>
+<li><span class="bugFix">Fixes some bugs</span>:
+Under Windows, when the files in the data directory was hidden, the
+state and / or preferences were not saved. Similarly, the currency
+converter didn't work.</li>
+<li>Added specific error messages on backup failure of the
+preferences or of startup state.</li>
 </ul>
 <h2>Version 0.9.4 (10/02/2011)</h2>
 <ul>
 <li><span class="bugFix">Fixes a bug</span>:
-the export crashed when "comment" was in the exported fields.</li><li><span class="bugFix">Fixes a problem</span> with Java 1.7: closing Yapbam didn't exit the java virtual machine process.</li>
+the export crashed when "comment" was in the exported fields.</li>
+<li><span class="bugFix">Fixes a problem</span>
+with Java 1.7: closing Yapbam didn't exit the java virtual machine
+process.</li>
 </ul>
 <h2>Version 0.9.3 (09/25/2011)</h2>
 <ul>
