--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -19,12 +19,15 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.9.6 (??/10/2011)</h1>
+<h1>Version 0.9.6 (23/10/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
   <li><span class="bugFix">Correction d'un bug</span> : L'affichage de l'historique 
-    du solde d'un compte poss&eacute;dant un solde initial nul et uniquement des 
-    op&eacute;rations de montant nul provoquait une erreur.</li>
+    du solde d'un compte possédant un solde initial nul et uniquement des 
+    opérations de montant nul provoquait une erreur.</li><li><span class="bugFix">Correction d'un bug</span>
+dans l'assistant de saisie des sous-opérations : Sélectionner un
+libellé qui n'apparraissait&nbsp;dans aucune opération du compte de
+l'opération éditée entrainait le plantage de l'assistant.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
@@ -90,7 +93,7 @@ quelles informations sont conservées entre deux exécutions de Yapbam.</li>
 <li>Ajout de la possibilité de mémoriser le filtre entre deux
 exécutions de Yapbam.</li>
 <li>Ajout d'un champ "commentaire" aux opérations.</li>
-<li>Ajout d'une mode de création en masse des opérations.</li>
+<li>Ajout d'un mode de création en masse des opérations.</li>
 <li>Modification du script yapbam.sh pour permettre aux
 utilisateurs de lancer yapbam plus facilement sur MacOS.<br>
 </li>
