--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -15,19 +15,23 @@ color: #ff9900;
 </style>
 </head>
 <body>
-<h1>Version 0.9.6 (10/23/2011)</h1>
+<h1>Version 0.9.7 (10/23/2011)</h1>
 <h2>New in this version</h2>
 <ul>
-<li><span class="bugFix">Fixes a bug</span>:
-Displaying the balance history of an account that a null initial
-balance and all its transaction's amount null resulted in an error.</li>
-<li><span class="bugFix">Fixes a bug</span> in the wizard
-for entering sub-transactions: Select a wording that does not appeared
-in any transaction of the account of the edited transaction caused the
-wizard to crash.</li>
+  <li><span class="bugFix">Fixes a bug</span>: Entering a transaction with a date 
+    before 1/1/1970 cause errors.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
+<h2>Version 0.9.6 (10/23/2011)</h2>
+<ul>
+  <li><span class="bugFix">Fixes a bug</span>: Displaying the balance history 
+    of an account that a null initial balance and all its transaction's amount 
+    null resulted in an error.</li>
+  <li><span class="bugFix">Fixes a bug</span> in the wizard for entering sub-transactions: 
+    Select a wording that does not appeared in any transaction of the account 
+    of the edited transaction caused the wizard to crash.</li>
+</ul>
 <h2>Version 0.9.5 (10/16/2011)</h2>
 <ul>
 <li>Safeguarding the filter between two Yapbam launches is
