--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -22,15 +22,21 @@ color: #ff9900;
 <h1>Version 0.9.6 (23/10/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug</span> : L'affichage de l'historique 
-    du solde d'un compte possédant un solde initial nul et uniquement des 
-    opérations de montant nul provoquait une erreur.</li><li><span class="bugFix">Correction d'un bug</span>
-dans l'assistant de saisie des sous-opérations : Sélectionner un
-libellé qui n'apparraissait&nbsp;dans aucune opération du compte de
-l'opération éditée entrainait le plantage de l'assistant.</li>
+  <li><span class="bugFix">Correction d'un bug</span> : La saisie d'une op&eacute;ration 
+    dat&eacute;e d'avant le 1/1/1970 provoquait des erreurs.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
+<h2>Version 0.9.6 (23/10/2011)</h2>
+<ul>
+  <li><span class="bugFix">Correction d'un bug</span> : L'affichage de l'historique 
+    du solde d'un compte possédant un solde initial nul et uniquement des opérations 
+    de montant nul provoquait une erreur.</li>
+  <li><span class="bugFix">Correction d'un bug</span> dans l'assistant de saisie 
+    des sous-opérations : Sélectionner un libellé qui n'apparraissait&nbsp;dans 
+    aucune opération du compte de l'opération éditée entrainait le plantage de 
+    l'assistant.</li>
+</ul>
 <h2>Version 0.9.5 (16/10/2011)</h2>
 <ul>
   <li>La sauvegarde du filtre entre deux lancements de Yapbam est de nouveau disponible 
