--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -12,14 +12,13 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style>
-</head>
+</style></head>
 <body>
-<h1>Version 0.9.7 (10/23/2011)</h1>
+<h1>Version 0.9.7 (11/??/2011)</h1>
 <h2>New in this version</h2>
 <ul>
   <li><span class="bugFix">Fixes a bug</span>: Entering a transaction with a date 
-    before 1/1/1970 cause errors.</li>
+    before 1/1/1970 cause errors.</li><li>It is now possible to display relative balances in the transactions tab (you have to click a balance to make it the reference for other balances).</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
