--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -19,11 +19,14 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.9.6 (23/10/2011)</h1>
+<h1>Version 0.9.7 (??/11/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
-  <li><span class="bugFix">Correction d'un bug</span> : La saisie d'une op&eacute;ration 
-    dat&eacute;e d'avant le 1/1/1970 provoquait des erreurs.</li>
+  <li><span class="bugFix">Correction d'un bug</span> : La saisie d'une opération 
+    datée d'avant le 1/1/1970 provoquait des erreurs.</li><li>Il
+est désormais possible d'afficher les soldes relatifs dans l'onglet des
+transactions (Il suffit de cliquer sur un solde pour en faire la
+référence pour les autres soldes).</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
