--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -18,7 +18,13 @@ color: #ff9900;
 <h2>New in this version</h2>
 <ul>
   <li><span class="bugFix">Fixes a bug</span>: Entering a transaction with a date 
-    before 1/1/1970 cause errors.</li><li>It is now possible to display relative balances in the transactions tab (you have to click a balance to make it the reference for other balances).</li>
+    before 1/1/1970 cause errors.</li><li>It
+is now possible to display relative balances in the transactions tab
+(you have to click a balance to make it the reference for other
+balances).</li><li>The components of the tab "operations" are
+rearranged. The buttons for creating / editing / deleting operations
+are now in the list, as in the lists in the "Administration". Adds
+button to create bulk operations.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
