--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -26,7 +26,7 @@ color: #ff9900;
     datée d'avant le 1/1/1970 provoquait des erreurs.</li><li>Il
 est désormais possible d'afficher les soldes relatifs dans l'onglet des
 transactions (Il suffit de cliquer sur un solde pour en faire la
-référence pour les autres soldes).</li>
+référence pour les autres soldes).</li><li>Les composants de l'onglet "opérations" sont réarrangés. Les boutons de création/édition/suppression d'opérations sont à présent sous la liste, comme dans les listes affichées dans l'onglet "Administration". Ajout d'un bouton pour créer les opérations en masse.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
