--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -22,11 +22,20 @@ color: #ff9900;
 <h1>Version 0.9.7 (??/11/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
+  <li>Il est désormais possible d'afficher les soldes relatifs dans l'onglet des 
+    transactions (Il suffit de cliquer sur un solde pour en faire la référence 
+    pour les autres soldes).</li>
+  <li>Les composants de l'onglet "opérations" sont réarrangés. Les boutons de 
+    création/édition/suppression d'opérations sont à présent sous la liste, comme 
+    dans les listes affichées dans l'onglet "Administration".<br>
+    Ajout d'un bouton pour créer les opérations en masse. Le menu de s&eacute;lection 
+    des colonnes est maintenant en haut &agrave; droite, ce qui semble une position 
+    plus classique (idem dans la vue relev&eacute; de compte).</li>
   <li><span class="bugFix">Correction d'un bug</span> : La saisie d'une opération 
-    datée d'avant le 1/1/1970 provoquait des erreurs.</li><li>Il
-est désormais possible d'afficher les soldes relatifs dans l'onglet des
-transactions (Il suffit de cliquer sur un solde pour en faire la
-référence pour les autres soldes).</li><li>Les composants de l'onglet "opérations" sont réarrangés. Les boutons de création/édition/suppression d'opérations sont à présent sous la liste, comme dans les listes affichées dans l'onglet "Administration". Ajout d'un bouton pour créer les opérations en masse.</li>
+    datée d'avant le 1/1/1970 provoquait des erreurs.</li>
+  <li><span class="bugFix">Correction d'un bug</span> : Le filtre n'&eacute;tait 
+    jamais enregistr&eacute; lorsque les donn&eacute;es n'&eacute;taient pas enregistr&eacute;es 
+    avant la fermeture de la fen&ecirc;tre de Yapbam.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
