--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -17,14 +17,15 @@ color: #ff9900;
 <h1>Version 0.9.7 (11/??/2011)</h1>
 <h2>New in this version</h2>
 <ul>
+  <li>It is now possible to display relative balances in the transactions tab 
+    (you have to click a balance to make it the reference for other balances).</li>
+  <li>The components of the tab "operations" are rearranged. The buttons for creating 
+    / editing / deleting operations are now in the list, as in the lists in the 
+    "Administration". Adds button to create bulk operations.</li>
   <li><span class="bugFix">Fixes a bug</span>: Entering a transaction with a date 
-    before 1/1/1970 cause errors.</li><li>It
-is now possible to display relative balances in the transactions tab
-(you have to click a balance to make it the reference for other
-balances).</li><li>The components of the tab "operations" are
-rearranged. The buttons for creating / editing / deleting operations
-are now in the list, as in the lists in the "Administration". Adds
-button to create bulk operations.</li>
+    before 1/1/1970 cause errors.</li>
+  <li><span class="bugFix">Fixes a bug</span>: The filter was never saved when 
+    the data were not recorded before closing Yapbam's window.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
