--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -23,9 +23,9 @@ color: #ff9900;
     / editing / deleting operations are now in the list, as in the lists in the 
     "Administration". Adds button to create bulk operations.</li>
   <li><span class="bugFix">Fixes a bug</span>: Entering a transaction with a date 
-    before 1/1/1970 cause errors.</li>
+    before 1/1/1970 caused errors.</li>
   <li><span class="bugFix">Fixes a bug</span>: The filter was never saved when 
-    the data were not recorded before closing Yapbam's window.</li>
+    the data were not recorded before closing Yapbam's window.</li><li><span class="bugFix">Fixes a bug</span>: Importing an empty file caused an error.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
