--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -28,14 +28,14 @@ color: #ff9900;
   <li>Les composants de l'onglet "opérations" sont réarrangés. Les boutons de 
     création/édition/suppression d'opérations sont à présent sous la liste, comme 
     dans les listes affichées dans l'onglet "Administration".<br>
-    Ajout d'un bouton pour créer les opérations en masse. Le menu de s&eacute;lection 
-    des colonnes est maintenant en haut &agrave; droite, ce qui semble une position 
-    plus classique (idem dans la vue relev&eacute; de compte).</li>
+    Ajout d'un bouton pour créer les opérations en masse. Le menu de sélection 
+    des colonnes est maintenant en haut à droite, ce qui semble une position 
+    plus classique (idem dans la vue relevé de compte).</li>
   <li><span class="bugFix">Correction d'un bug</span> : La saisie d'une opération 
     datée d'avant le 1/1/1970 provoquait des erreurs.</li>
-  <li><span class="bugFix">Correction d'un bug</span> : Le filtre n'&eacute;tait 
-    jamais enregistr&eacute; lorsque les donn&eacute;es n'&eacute;taient pas enregistr&eacute;es 
-    avant la fermeture de la fen&ecirc;tre de Yapbam.</li>
+  <li><span class="bugFix">Correction d'un bug</span> : Le filtre n'était 
+    jamais enregistré lorsque les données n'étaient pas enregistrées 
+    avant la fermeture de la fenêtre de Yapbam.</li><li><span class="bugFix">Correction d'un bug</span> : L'importation d'un fichier vide provoquait une erreur.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
