--- a/Yapbam/src/localization/contributors.html
+++ b/Yapbam/src/localization/contributors.html
@@ -16,10 +16,8 @@ color: #ff9900;
 -->
 </style></head><body>
 <h1>Contributors</h1>
-English translation: <a href="http://minervah.users.sourceforge.net/">Sharada
-Palagummi</a><br>
-Portuguese translation: <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a><br>
+English translation: <a href="http://minervah.users.sourceforge.net/">Sharada Palagummi</a><br>
+Portuguese translation: <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a>, Robert Marques Maia<br>
 Tests: Laurence Bot, Christophe Aroles, Philippe Petit<br>
-Development, web site, administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
-Astesana (Fathzer)</a><br>
+Development, web site, administration: <a href="http://fathzer.users.sourceforge.net/">Jean-Marc Astesana (Fathzer)</a><br>
 </body></html>
