--- a/Yapbam/src/localization/fr/contributors.html
+++ b/Yapbam/src/localization/fr/contributors.html
@@ -16,10 +16,8 @@ color: #ff9900;
 -->
 </style></head><body>
 <h1>Contributeurs</h1>
-Traduction anglaise : <a href="http://minervah.users.sourceforge.net/">Sharada
-Palagummi</a><br>
-Traduction portuguaise : <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza</a><br>
+Traduction anglaise : <a href="http://minervah.users.sourceforge.net/">Sharada Palagummi</a><br>
+Traduction portuguaise : <a href="http://marcolanza.users.sourceforge.net/">Marco Lanza, Robert Marques Maia</a><br>
 Tests : Laurence Bot, Christophe Aroles, Philippe Petit<br>
-Développement, site web, administration : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc
-Astesana (Fathzer)</a><br>
+Développement, site web, administration : <a href="http://fathzer.users.sourceforge.net/">Jean-Marc Astesana (Fathzer)</a><br>
 </body></html>
