--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -25,7 +25,7 @@ color: #ff9900;
   <li><span class="bugFix">Fixes a bug</span>: Entering a transaction with a date 
     before 1/1/1970 caused errors.</li>
   <li><span class="bugFix">Fixes a bug</span>: The filter was never saved when 
-    the data were not recorded before closing Yapbam's window.</li><li><span class="bugFix">Fixes a bug</span>: Importing an empty file caused an error.</li>
+    the data were not recorded before closing Yapbam's window.</li><li><span class="bugFix">Fixes a bug</span>: Importing an empty file caused an error.</li><li><span class="bugFix">Fixes a bug</span>: Click a help button caused a crash if java was unable to open a web browser.</li>
 </ul>
 <hr>
 <h1>Older releases</h1>
