--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -35,7 +35,7 @@ color: #ff9900;
     datée d'avant le 1/1/1970 provoquait des erreurs.</li>
   <li><span class="bugFix">Correction d'un bug</span> : Le filtre n'était 
     jamais enregistré lorsque les données n'étaient pas enregistrées 
-    avant la fermeture de la fenêtre de Yapbam.</li><li><span class="bugFix">Correction d'un bug</span> : L'importation d'un fichier vide provoquait une erreur.</li>
+    avant la fermeture de la fenêtre de Yapbam.</li><li><span class="bugFix">Correction d'un bug</span> : L'importation d'un fichier vide provoquait une erreur.</li><li><span class="bugFix">Correction d'un bug</span> : Cliquer sur un bouton d'aide provoquait un plantage si java était dans l'incapacité d'ouvrir un navigateur web.</li>
 </ul>
 <hr>
 <h1>Versions précédentes</h1>
