--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Release notes</title>
-
 <style type="text/css">
 .bugFix {
 color: #009900;
@@ -107,37 +106,30 @@ between
 two Yapbam launches.</li>
 <li>The filter can be remembered between two launches.</li>
 <li>Adds a comment field to the transactions.</li>
-<li><span id="result_box" class="short_text" lang="en"><span class="hps">Adds a</span>
-<span class="hps">method for</span> <span class="hps">creating</span> <span class="hps">mass</span>
-<span class="hps">transactions</span></span>.</li>
+<li>Adds a method for creating mass transactions.</li>
 <li>Changes to the yapbam.sh script in order to simplify the
-use on
-macOS.<br>
+use on macOS.<br>
 </li>
 <li><span class="bugFix">Fixes a bug</span>
 in the import process: When there were missing columns at the end of
 imported lines, the import failed.</li>
 <li><span class="bugFix">Fixes a minor bug</span>:
-<span id="result_box" class="" lang="en"><span class="hps">When, in the</span> </span><span id="result_box" class="" lang="en"><span class="hps">transaction </span></span><span id="result_box" class="" lang="en"><span class="hps">input dialog</span><span class="hps"></span><span>,</span>
-<span class="hps">you chose</span> <span class="hps">a</span> <span class="hps">predefined
-label</span> with the date field empty, <span>the</span>
-<span class="hps">error dialog</span><span class=""> signaled an
-program error.</span></span></li>
-<li><span id="result_box" class="" lang="en"><span class=""><span class="bugFix">Fixes a minor bug</span>:
+When, in the transaction input dialog, you chose a predefined label with the date field empty, the error dialog
+signaled a program error.</li>
+<li><span class="bugFix">Fixes a minor bug</span>:
 The mode creation dialog allowed the user to check the "use a
 checkbook" box then to uncheck the "Usable for expenses" box.
-Validating such a dialog caused an error.</span></span></li>
-<li><span id="result_box" class="" lang="en"><span class=""><span class="bugFix">Fixes a minor bug</span>&nbsp;in
-the subtransaction
-edition dialog: When you chose a description
+Validating such a dialog caused an error.</li>
+<li><span class="bugFix">Fixes a minor bug</span>&nbsp;in
+the subtransaction edition dialog: When you chose a description
 in the popup menu by clicking on it with the mouse, the description
 appeared in the field (this is the normal behaviour). But, when
 validating the input, the description saved was the one before
-selecting the predefined description !</span></span></li>
-<li><span id="result_box" class="" lang="en"><span class=""><span class="bugFix">Fixes a bug</span>:
+selecting the predefined description !</li>
+<li><span class="bugFix">Fixes a bug</span>:
 Entering an invalid regular
 expression in the "custom filter" dialog caused an error when
-validating the dialog.</span></span></li>
+validating the dialog.</li>
 </ul>
 <h2>Version 0.8.8 (08/03/2011)</h2>
 <ul>
@@ -210,57 +202,29 @@ Selecting a transaction
 in the statement tab or in the balance history tab didn't enabled
 delete/edit/duplicate menu items.</li>
 <li><span class="bugFix">Fixes a bug</span>:
-<span id="result_box" class="" lang="en"><span title="Cliquer ici pour voir d'autres traductions" class="hps">If</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">the</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">file
-opened</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">at
-start</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">had</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">a</span>n
-alert <span title="Cliquer ici pour voir d'autres traductions" class="hps">on the</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">balance,</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">it</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">was
-not</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">immediately</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">displayed</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps atn">in the "</span><span title="Cliquer ici pour voir d'autres traductions">Balance
-History</span>"
-tab.</span></li>
-<li><span id="result_box" class="" lang="en"><span class="bugFix">Fixes</span>
-some localization problems (some wordings with a wrong language).</span></li>
+If the file opened at start had an alert on the balance, it was
+not immediately displayed in the "Balance History</span>
+tab.</li>
+<li><span class="bugFix">Fixes some localization problems (some wordings with a wrong language).</span></li>
 </ul>
 <h2>Version 0.8.3 (05/08/2011)</h2>
 <ul>
 <li>Adds an accounts summary view.</li>
-<li>Adds
-a transaction table in the balance history tab. This table shows
+<li>Adds a transaction table in the balance history tab. This table shows
 transactions, sorted by value date, with the remaining balance after
 each transaction.</li>
 <li>When a value date interval is selected in the filter, the
-balance
-history chart now&nbsp;<span id="result_box" class="" lang="en"><span title="Cliquer ici pour voir d'autres traductions" class="hps">begins</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">and</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">ends</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">on
-the </span></span><span id="result_box" class="" lang="en"><span title="Cliquer ici pour voir d'autres traductions" class="hps">value</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps"></span></span><span id="result_box" class="" lang="en"><span title="Cliquer ici pour voir d'autres traductions" class="hps">dates</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">specified </span><span title="Cliquer ici pour voir d'autres traductions" class="hps">in
-the</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">filter</span></span>.</li>
-<li>The check mode is moved in the Statement view.&nbsp;<span id="result_box" class="" lang="en"><span title="Cliquer ici pour voir d'autres traductions" class="hps">This</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">view</span><span title="Cliquer ici pour voir d'autres traductions" class="hps">
-has now</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">column</span>s
-<span title="Cliquer ici pour voir d'autres traductions" class="hps atn">"</span><span class="" title="Cliquer ici pour voir d'autres traductions">category</span><span title="Cliquer ici pour voir d'autres traductions">"</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">and</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps atn">"</span><span class="" title="Cliquer ici pour voir d'autres traductions">Mode</span><span title="Cliquer ici pour voir d'autres traductions">"</span><span title="Cliquer ici pour voir d'autres traductions">,</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">a menu</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">to
-show /</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">hide</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">columns</span><span title="Cliquer ici pour voir d'autres traductions">,</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">and</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">the
-ability to</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">sort</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">the</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">view
-along</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">the</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">column
-of your</span> <span title="Cliquer ici pour voir d'autres traductions" class="hps">choice</span><span title="Cliquer ici pour voir d'autres traductions">.</span></span></li>
+balance history chart now begins and ends on the value dates in the filter.</li>
+<li>The check mode is moved in the Statement view. This view has now columns "category" and "Mode",
+a menu to show/hide columns, and the ability to sort the view along the column
+of your choice.</li>
 <li>Adds a confirm dialog when the user export the budget view
 to an
 existing file.</li>
 <li>Adds
 transaction editing options to fill automatically the statement id
 attribute of the transactions, to be alerted when you change a checked
-transaction,&nbsp;to confirm transactions deletion, etc...</li>
+transaction to confirm transactions deletion, etc...</li>
 <li><span class="bugFix">Fixes&nbsp;bugs</span>
 in Statement view:</li>
 <ul>
@@ -335,8 +299,7 @@ make the value in the field out of range.</li>
 <li><span class="bugFix">Fixes a bug</span>:
 When editing a transaction, if you chose a description with the
 wizard that would have imply the use of a checkbook, the check number
-field was not&nbsp;<span id="result_box" class="" lang="en"><span title="Cliquer ici pour voir d'autres traductions" class="hps">properly</span>
-<span title="Cliquer ici pour voir d'autres traductions" class="hps">initialized</span></span>.</li>
+field was not properly initialized.</li>
 <li><span class="bugFix">Fixes a bug</span>:
 Create a receipt with a null amout may lead to errors.</li>
 <li><span class="bugFix">Fixes a bug</span>:
