--- a/src/localization/fr/Release notes.html
+++ b/src/localization/fr/Release notes.html
@@ -1,10 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
-
-
-
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Notes de mise à jour</title>
-
 <style type="text/css">
 <!--
 .bugFix {
@@ -100,8 +96,7 @@ L'exportation des opérations était impossible si une exportation avait
 <li><span class="bugFix">Correction d'un bug
 mineur </span>dans la
 saisie des modes de paiement : Le bouton "valider" n'était pas toujours
-correctement invalidé quand les champs n'étaient pas renseignés. <span id="result_box" class="" lang="en"><span class="">La validation dans cette configuration provoquait
-une erreur.</span></span></li>
+correctement invalidé quand les champs n'étaient pas renseignés. La validation dans cette configuration provoquait une erreur.</li>
 </ul>
 <h2>Version 0.9.0 (14/09/2011)</h2>
 <ul>
@@ -126,20 +121,18 @@ prédéfini alors que le champ date était vide, une erreur, sans aucune
 conséquence, était remontée
 (apparition du dialogue d'erreur).</li>
 <li><span class="bugFix">Correction d'un bug mineur</span>
-: <span id="result_box" class="" lang="en"><span class="">Le
-dialogue de création de mode de paiement permettait de cocher la case
+: Le dialogue de création de mode de paiement permettait de cocher la case
 "Utiliser un chéquier" puis de décocher "Utilisable pour les dépenses".
-La validation dans cette configuration provoquait une erreur.</span></span></li>
-<li><span class="bugFix">Correction d'un bug mineur</span><span id="result_box" class="" lang="en"><span class=""><span class="bugFix"></span>
-dans le dialogue de création des sous-opérations: Quand on choisissais
+La validation dans cette configuration provoquait une erreur.</li>
+<li><span class="bugFix">Correction d'un bug mineur</span>
+dans le dialogue de création des sous-opérations: Quand on choisissait
 un libellé en cliquant dans le menu des libellés suggérés, la
 description était bien reportée dans le champ MAIS, quand on validait
 la saisie, le libellé enregistré était celui saisi avant la valeur
-prédéfinie !</span></span></li>
-<li><span id="result_box" class="" lang="en"><span class=""><span class="bugFix">Correction d'un
-bug </span>:
+prédéfinie !</li>
+<li><span class="bugFix">Correction d'un bug </span>:
 Saisir une expression régulière incorrecte dans la dialogue "Filtre
-personnalisé" causait une erreur quand on confirmait la saisie.</span></span></li>
+personnalisé" causait une erreur quand on confirmait la saisie.</li>
 </ul>
 <h2>Version 0.8.8 (03/08/2011)</h2>
 <ul>
