--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -13,7 +13,7 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.9.7 (11/??/2011)</h1>
+<h1>Version 0.9.7 (11/13/2011)</h1>
 <h2>New in this version</h2>
 <ul>
   <li>It is now possible to display relative balances in the transactions tab 
