--- a/Yapbam/src/localization/fr/Release notes.html
+++ b/Yapbam/src/localization/fr/Release notes.html
@@ -15,7 +15,7 @@ color: #ff9900;
 -->
 </style></head>
 <body>
-<h1>Version 0.9.7 (??/11/2011)</h1>
+<h1>Version 0.9.7 (13/11/2011)</h1>
 <h2>Nouveautés de cette version</h2>
 <ul>
   <li>Il est désormais possible d'afficher les soldes relatifs dans l'onglet des 
