--- a/src/localization/Release notes.html
+++ b/src/localization/Release notes.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html><head>
+
+
 <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>Release notes</title>
 <style type="text/css">
 .bugFix {
@@ -11,23 +13,22 @@ color: #aa0000;
 .develop {
 color: #ff9900;
 }
-</style></head>
-<body>
-<h1>Version 0.9.7 (11/13/2011)</h1>
+</style></head><body>
+<h1>Version 0.9.8 (11/??/2011)</h1>
 <h2>New in this version</h2>
-<ul>
-  <li>It is now possible to display relative balances in the transactions tab 
-    (you have to click a balance to make it the reference for other balances).</li>
-  <li>The components of the tab "operations" are rearranged. The buttons for creating 
-    / editing / deleting operations are now in the list, as in the lists in the 
-    "Administration". Adds button to create bulk operations.</li>
-  <li><span class="bugFix">Fixes a bug</span>: Entering a transaction with a date 
-    before 1/1/1970 caused errors.</li>
-  <li><span class="bugFix">Fixes a bug</span>: The filter was never saved when 
-    the data were not recorded before closing Yapbam's window.</li><li><span class="bugFix">Fixes a bug</span>: Importing an empty file caused an error.</li><li><span class="bugFix">Fixes a bug</span>: Click a help button caused a crash if java was unable to open a web browser.</li>
+<ul><li><span class="bugFix">Fixes a bug</span>: Some imported file separators (eg \) were not supported. Using such a separator led to a crash of the import file dialog.</li>
 </ul>
 <hr>
-<h1>Older releases</h1>
+<h1>Previous releases</h1>
+<h2>Version 0.9.7 (11/13/2011)</h2>
+<ul>
+<li>It is now possible to display relative balances in the transactions tab 
+    (you have to click a balance to make it the reference for other balances).</li><li>The components of the tab "operations" are rearranged. The buttons for creating 
+    / editing / deleting operations are now in the list, as in the lists in the 
+    "Administration". Adds button to create bulk operations.</li><li><span class="bugFix">Fixes a bug</span>: Entering a transaction with a date 
+    before 1/1/1970 caused errors.</li><li><span class="bugFix">Fixes a bug</span>: The filter was never saved when 
+    the data were not recorded before closing Yapbam's window.</li><li><span class="bugFix">Fixes a bug</span>: Importing an empty file caused an error.</li><li><span class="bugFix">Fixes a bug</span>: Click a help button caused a crash if java was unable to open a web browser.</li>
+</ul>
 <h2>Version 0.9.6 (10/23/2011)</h2>
 <ul>
   <li><span class="bugFix">Fixes a bug</span>: Displaying the balance history 
@@ -203,7 +204,7 @@ in the statement tab or in the balance history tab didn't enabled
 delete/edit/duplicate menu items.</li>
 <li><span class="bugFix">Fixes a bug</span>:
 If the file opened at start had an alert on the balance, it was
-not immediately displayed in the "Balance History</span>
+not immediately displayed in the "Balance History
 tab.</li>
 <li><span class="bugFix">Fixes some localization problems (some wordings with a wrong language).</span></li>
 </ul>
