--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -16,7 +16,13 @@ color: #ff9900;
 </style></head><body>
 <h1>Version 0.9.8 (11/??/2011)</h1>
 <h2>New in this version</h2>
-<ul><li><span class="bugFix">Fixes a bug</span>: Some imported file separators (eg \) were not supported. Using such a separator led to a crash of the import file dialog.</li>
+<ul>
+  <li><span class="bugFix">Fixes a bug</span>: Some imported file separators (eg 
+    \) were not supported. Using such a separator led to a crash of the import 
+    file dialog.</li>
+  <li><span class="bugFix">Fixes a bug</span>: Using account names, method of 
+    payment or categories that begin or end with spaces could cause crashes in 
+    the dialog for creating these objects.</li>
 </ul>
 <hr>
 <h1>Previous releases</h1>
