--- a/Yapbam/src/localization/Release notes.html
+++ b/Yapbam/src/localization/Release notes.html
@@ -15,10 +15,10 @@ color: #ff9900;
 }
 </style></head>
 <body>
-<h1>Version 0.9.8 (11/??/2011)</h1>
+<h1>Version 0.9.8 (12/??/2011)</h1>
 <h2>New in this version</h2>
 <ul>
-  <li><span class="bugFix">Bug fixes:</span></li><ul><li><span class="bugFix"></span> Some imported file separators (eg 
+  <li>Changes:</li><ul><li>When creating mass transactions the date is now kept when you click the next button.</li></ul><li><span class="bugFix">Bug fixes:</span></li><ul><li><span class="bugFix"></span> Some imported file separators (eg 
     \) were not supported. Using such a separator led to a crash of the import 
     file dialog.</li></ul>
   <ul><li><span class="bugFix"></span>Using account names, method of 
